--- a/project/css/style.css
+++ b/project/css/style.css
@@ -21,6 +21,7 @@ h2 {
     font-style: italic;
 }
 
+
 .title1 {
     grid-column: 1/2;
     padding-left: 10px;
@@ -34,7 +35,29 @@ h2 {
 .title3 {
     padding-left: 10px;
 }
+.title1a {
+    grid-column:1;
+    padding-left: 10px;
+    font-size: 35px;
+    border-top: 5px double;
+    border-bottom: 5px double;
+    font-style: italic;
+    margin-bottom: 1px;
+    margin-top: 15px;
 
+}
+.title1t {
+    grid-column:1/2 span;
+    padding-left: 10px;
+}
+.title1r {
+    grid-column:1;
+    font-size: 35px;
+    border-top: 5px double;
+    border-bottom: 5px double;
+    font-style: italic;
+    padding: 10px;
+}
 header {
     background-color: rgb(182, 211, 196);
     display: grid;
@@ -64,6 +87,167 @@ header {
     grid-row: 2;
 }
 
+.img3 {
+    border: 2px solid rgb(14, 13, 13);
+    justify-items: center;
+    margin-left: 10px;
+    grid-row: 1;
+    grid-column: 2;
+    width: 300px;
+}
+.img4 {
+    border: 1px solid #ccc;
+    padding: 10px;
+    box-shadow: 5px 5px 5px #999;
+    justify-items: center;
+    grid-row: 2;
+    width: 450px;
+}
+.img5 {
+    border: 2px solid rgb(14, 13, 13);
+    justify-items: right;
+    margin-left: 150px;
+    margin-top: 250px;
+    grid-row: 1;
+    grid-column: 2;
+    width: 300px;
+}
+.img6 {
+    border: 2px solid rgb(14, 13, 13);
+    justify-items: right;
+    margin-left: 10px;
+    margin-top: 500px;
+    grid-row: 1;
+    grid-column: 2;
+    width: 300px;
+}
+.img1t {
+    border: 2px solid rgb(14, 13, 13);
+    justify-items: center;
+    margin-left: 10px;
+    margin-top: 10px;
+    grid-row: 3;
+    grid-column: 1;
+    width: 300px;
+}
+.img2t {
+    border: 2px solid rgb(14, 13, 13);
+    justify-items: center;
+    margin-left: 10px;
+    margin-top: 10px;
+    grid-row: 3;
+    grid-column: 4;
+    width: 300px;
+    align-items: right;
+}
+.img3t {
+    border: 2px solid rgb(14, 13, 13);
+    justify-items: center;
+    margin-left: 10px;
+    margin-top: 10px;
+    grid-row: 4;
+    grid-column: 1;
+    width: 300px;
+}
+.img4t {
+    border: 2px solid rgb(14, 13, 13);
+    justify-items: center;
+    margin-left: 10px;
+    margin-top: 10px;
+    grid-row: 4;
+    grid-column: 4;
+    width: 300px;
+}
+.img5t {
+    border: 2px solid rgb(14, 13, 13);
+    justify-items: center;
+    margin-left: 10px;
+    margin-top: 10px;
+    grid-row: 5;
+    grid-column: 1;
+    width: 300px;
+}
+.img6t {
+    border: 2px solid rgb(14, 13, 13);
+    justify-items: center;
+    margin-left: 10px;
+    margin-top: 10px;
+    grid-row: 5;
+    grid-column: 4;
+    width: 300px;
+}
+.img7t {
+    border: 2px solid rgb(14, 13, 13);
+    justify-items: center;
+    margin-left: 10px;
+    margin-top: 10px;
+    grid-row: 6;
+    grid-column: 1;
+    width: 300px;
+}
+.img8t {
+    border: 2px solid rgb(14, 13, 13);
+    justify-items: center;
+    margin-left: 10px;
+    margin-top: 10px;
+    grid-row: 6;
+    grid-column: 4;
+    width: 300px;
+}
+.img9t {
+    border: 2px solid rgb(14, 13, 13);
+    justify-items: center;
+    margin-left: 10px;
+    margin-top: 10px;
+    grid-row: 7;
+    grid-column: 1;
+    width: 300px;
+}
+.img10t {
+    border: 2px solid rgb(14, 13, 13);
+    justify-items: center;
+    margin-left: 10px;
+    margin-top: 10px;
+    grid-row: 7;
+    grid-column: 4;
+    width: 300px;
+}
+.img11t {
+    border: 2px solid rgb(14, 13, 13);
+    justify-items: center;
+    margin-left: 10px;
+    margin-top: 10px;
+    grid-row: 8;
+    grid-column: 1;
+    width: 300px;
+}
+.img12t {
+    border: 2px solid rgb(14, 13, 13);
+    justify-items: center;
+    margin-left: 10px;
+    margin-top: 10px;
+    grid-row: 8;
+    grid-column: 4;
+    width: 300px;
+}
+.img13t {
+    border: 2px solid rgb(14, 13, 13);
+    justify-items: center;
+    margin-left: 10px;
+    margin-top: 10px;
+    grid-row: 9;
+    grid-column: 1;
+    width: 300px;
+}
+.img14t {
+    border: 2px solid rgb(14, 13, 13);
+    justify-items: center;
+    margin-left: 10px;
+    margin-top: 10px;
+    grid-row: 9;
+    grid-column: 4;
+    width: 300px;
+}
 header div.header img {
     grid-column: 1;
 }
@@ -79,32 +263,190 @@ body {
 main {
     display: grid;
     grid-gap: 10px;
-    grid-template-columns: lfr lfr;
+    grid-template-columns:lfr lfr;
     grid-template-rows: 1fr 1fr 1fr;
 }
-
+.maint {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    max-height: 1750px;
+}
+.mainr {
+    display: grid;
+    max-height: fit-content;
+    grid-template-rows: 100px;
+}
 .section1 {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 85px 1fr;
 }
-
+.section3a {
+    display: grid;
+    grid-template-columns: 1fr 1fr;   
+    grid-template-rows: 85px 1fr;
+}
 .p1 {
     padding: 10px;
     grid-column: 2;
     grid-row: 2;
+    text-align: center;
 }
 
 .p2 {
     padding: 10px;
     grid-row: 2;
-    grid-column: 1;
+    grid-column:1 ;
 }
 
 .p3 {
     padding: 15px;
 }
 
+.p4 {
+    margin-left: 10px;
+    margin-top: 70px;
+    padding: 10px;
+    grid-column: 2;
+    grid-row: 2;
+    font-style: italic;
+}
+
+.p5 {
+    margin-left: 10px;
+    padding: 10px;
+    grid-row: 2;
+    grid-column:1 ;
+}
+
+.p6 {
+    margin-left: 10px;
+    padding: 10px;
+    grid-row: 2;
+    grid-column:1 ;
+}
+.section2t {
+    margin-left: 10px;
+    grid-row: 2;
+    grid-column: 2/3 span;
+    text-align: center;
+    max-width: 300px;
+    border: 2px solid rgb(35, 35, 56);
+    border-radius: 1em;
+}
+.p1t {
+    margin-left: 10px;
+    margin-top: 55px;
+    padding: 10px;
+    grid-row: 3;
+    grid-column: 2;
+}
+.p2t {
+    margin-left: 80px;
+    margin-top: 55px;
+    padding: 10px;
+    grid-row: 3;
+    grid-column: 3;
+}
+.p3t {
+    margin-left: 10px;
+    margin-top: 55px;
+    padding: 10px;
+    grid-row: 4;
+    grid-column: 2;
+}
+.p4t {
+    margin-left: 80px;
+    margin-top: 55px;
+    padding: 10px;
+    grid-row: 4;
+    grid-column: 3;
+}
+.p5t {
+    margin-left: 10px;
+    margin-top: 55px;
+    padding: 10px;
+    grid-row: 5;
+    grid-column: 2;
+}
+.p6t {
+    margin-left: 80px;
+    margin-top: 55px;
+    padding: 10px;
+    grid-row: 5;
+    grid-column: 3;
+}
+.p7t {
+    margin-left: 10px;
+    margin-top: 55px;
+    padding: 10px;
+    grid-row: 6;
+    grid-column: 2;
+}
+.p8t {
+    margin-left: 80px;
+    margin-top: 55px;
+    padding: 10px;
+    grid-row: 6;
+    grid-column: 3;
+}
+.p9t {
+    margin-left: 10px;
+    margin-top: 55px;
+    padding: 10px;
+    grid-row: 7;
+    grid-column: 2;
+}
+.p10t {
+    margin-left: 80px;
+    margin-top: 55px;
+    padding: 10px;
+    grid-row: 7;
+    grid-column: 3;
+}
+.p11t {
+    margin-left: 10px;
+    margin-top: 55px;
+    padding: 10px;
+    grid-row: 8;
+    grid-column: 2;
+}
+.p12t {
+    margin-left: 80px;
+    margin-top: 55px;
+    padding: 10px;
+    grid-row: 8;
+    grid-column: 3;
+}
+.p13t {
+    margin-left: 10px;
+    margin-top: 55px;
+    padding: 10px;
+    grid-row: 9;
+    grid-column: 2;
+}
+.p14t {
+    margin-left: 80px;
+    margin-top: 55px;
+    padding: 10px;
+    grid-row: 9;
+    grid-column: 3;
+}
+.p15t {
+    margin-left: 10px;
+    padding: 10px;
+    grid-row: 10;
+    grid-column: 2/3 span;
+    max-width: 300px;
+    border: 2px solid rgb(35, 35, 56);
+    border-radius: 1em;
+}
+.p1r{
+    margin: auto;
+    padding-bottom: 20px;
+    padding-top: 20px;
+}
 .section2 {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -151,6 +493,11 @@ nav ul {
 }
 
 main div.hero img {
+    width: 100%;
+    opacity: 0.6;
+}
+
+main div.hero1 img {
     width: 100%;
     opacity: 0.6;
 }
@@ -204,4 +551,77 @@ a:link {
     .______ {
         display: block;
     }
+}
+form {
+    margin: 0 auto;
+    width: 400px;
+    padding: 1em;
+    border: 2px solid rgb(7, 39, 23);
+    border-radius: 1em;
+    margin-bottom: 50px;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+    margin-bottom: 0;
+}
+
+form li+li {
+    margin-top: 1em;
+}
+
+label {
+    display: inline-block;
+    width: 90px;
+    text-align: right;
+}
+
+input,
+textarea {
+    font: 1em sans-serif;
+
+    width: 300px;
+    box-sizing: border-box;
+
+    border: 1px solid #999;
+}
+
+input:focus,
+textarea:focus {
+    border-color: #000;
+}
+
+textarea {
+    vertical-align: top;
+    height: 5em;
+}
+
+.button {
+    margin-left: 80px;
+}
+
+button {
+    margin-left: .5em;
+    line-height: 2.2em;
+    width: 10em;
+    background-color: #318a90;
+    font-size: 1.5em;
+    font-weight: bold;
+    border-radius: .5em;
+
+}
+
+#feedback {
+    display: none;
+    color: whitesmoke;
+    font-size: 20px;
+    font-family: URW Chancery L, cursive;
+    width: 600px;
+    padding: 1em;
+    border: 3px solid rgb(27, 5, 5);
+    border-radius: 1em;
+    background-color:rgb(47, 105, 107);
+    margin-top: 10px;
+    margin: 0 auto;
 }
