--- a/final/guerilla.css
+++ b/final/guerilla.css
@@ -177,7 +177,16 @@ header {
     padding: 2px;
     margin-right: auto;
 }
-
+.imgj1 {
+    margin-top: 138px;
+    margin-bottom: -650px;
+    opacity: 25%;
+    margin-left:auto ;
+    margin-right: auto;
+    height:475px;
+    width:435px;
+    border-radius: 1em;
+}
 .i6t {
     grid-row: 3;
     grid-column: 2;
@@ -259,7 +268,7 @@ main {
     margin: auto;
     padding-bottom: 20px;
     padding-top: 20px;
-    margin-top: -100px;
+    margin-top: -300px;
     font-size: larger;
     color: rgb(56, 27, 27);
 }
@@ -377,12 +386,12 @@ a:link {
 }
 
 form {
-    margin: 0 auto;
+    margin: auto;
     width: 400px;
     padding: 1em;
     border: 2px solid rgb(7, 39, 23);
     border-radius: 1em;
-    margin-bottom: 50px;
+    margin-bottom:50px;
     margin-top: -200px;
 }
 
@@ -430,7 +439,7 @@ button {
     margin-left: .5em;
     line-height: 2.2em;
     width: 10em;
-    background-color: #318a90;
+    background-color: #906f31;
     font-size: 1.5em;
     font-weight: bold;
     border-radius: .5em;
