--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ header, main, footer {
 header, footer {  
     border-radius: 15px;
     padding: .5rem;
-    background-color: rgb(44, 85, 6);
+    background-color: rgb(56, 255, 255);
 }
 body {
     font-size: 14px;
@@ -18,4 +18,7 @@ header img {
     height: 160px;
     width: auto;
     border-radius: 4px;
+}
+h1 {
+    font-size: 36px;
 }
